--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous"> 
     <link rel="stylesheet" href="main.css">
+    <link rel="icon" href="IMG/pngtree-cloud-technology-icon-png-image_428168.jpg"
     <title>Document</title>
 </head>
 <body>
     <div class="header">
         <div class="row align-items-center">
             <div class="col">
-                <img src="kisspng-privately-held-company-private-limited-company-hyp-jobs-at-skcript-hasjob-5b6d37cd314344.0359161715338843652018.jpg "  class="img-thumbnail" width="80vw" > 
-                
+                <img src="IMG/kisspng-privately-held-company-private-limited-company-hyp-jobs-at-skcript-hasjob-5b6d37cd314344.0359161715338843652018.jpg"  class="img-thumbnail" width="80vw" >  
             </div>
             <div class="col top">
               <h1>TECH STRAP</h1>
@@ -36,7 +36,7 @@
         <div class="row">
             <div class="col">
                 <div class="card" style="width: 18rem;">
-                    <img src="download.jpg" class="card-img-top" alt="...">
+                    <img src="IMG/download.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">AI</h5>
                       <p class="card-text">Technology is best when it brings people together.</p>
@@ -46,7 +46,7 @@
             </div>
             <div class="col">
                 <div class="card" style="width: 18rem;">
-                    <img src="download (1).jpg" class="card-img-top" alt="...">
+                    <img src="IMG/download (1).jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">TECHNOLOGY</h5>
                       <p class="card-text">If it keeps up, man will atrophy all his limbs but the push-button finger.</p>
@@ -56,7 +56,7 @@
             </div>
             <div class="col">
                 <div class="card" style="width: 18rem;">
-                    <img src="download (2).jpg" class="card-img-top" alt="...">
+                    <img src="IMG/download (2).jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">INTERNET</h5>
                       <p class="card-text">Technology is a useful servant but a dangerous master.</p>
@@ -73,13 +73,13 @@
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="3.webp" class="d-block w-100" alt="...">
+                <img src="IMG/3.webp" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="ss.webp" class="d-block w-100" alt="...">
+                <img src="IMG/ss.webp" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="1.webp" class="d-block w-100" alt="...">
+                <img src="IMG/1.webp" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -100,9 +100,26 @@
         </p>
         </div>
       </div>   
-    </div>
-    <div class="container">
-
+    </div><br>
+    <div class="footer ht">
+      <div class="container">
+        <div class="card text-center">
+          <div class="card-header foot">
+           <h2> CONTACT </h2>
+          </div>
+              <div class="card-body ft ">
+                <div class="row ">
+                  <div class="col-3">
+                   <P>EMAIL:<a  href="#">techstrap@gmail.com</a></P>
+                   <P>PH.NO:<a  href="#">7584634521</a><br></P>
+                   <P>INSTAGRAM:<a  href="#">TECH-STRAP</a></P>
+                   <P>FACEBOOK:<a  href="#">Tech-strap</a></P>
+                   <P>TWITTER:<a  href="#">TECH-S</a><br></P>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
