--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous"> 
     <link rel="stylesheet" href="main.css">
-    <link rel="icon" href="IMG/pngtree-cloud-technology-icon-png-image_428168.jpg"
-    <title>Document</title>
+    <link rel="icon" href="IMG/sm_5b288fa409525.jpg">
+    <title>TECH-STRAP</title>
 </head>
 <body>
     <div class="header">
@@ -17,23 +17,23 @@
             <div class="col top">
               <h1>TECH STRAP</h1>
             </div>
-            <div class="col ">
+            <div class="col bot">
                 <ul class="nav justify-content-end">
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                      <a class="nav-link active nav-font" aria-current="page" href="#">HOME</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">LOGIN</a>
+                      <a class="nav-link nav-font" href="#">LOGIN</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">SIGN UP</a>
+                      <a class="nav-link nav-font" href="#">SIGN UP</a>
                     </li>
                   </ul> 
             </div>       
         </div>    
-    </div>
+    </div><br>
     <div class="container">
-        <div class="row">
+        <div class="row tops">
             <div class="col">
                 <div class="card" style="width: 18rem;">
                     <img src="IMG/download.jpg" class="card-img-top" alt="...">
@@ -102,14 +102,14 @@
       </div>   
     </div><br>
     <div class="footer ht">
-      <div class="container">
+      <div class="container-fluid">
         <div class="card text-center">
           <div class="card-header foot">
            <h2> CONTACT </h2>
           </div>
               <div class="card-body ft ">
                 <div class="row ">
-                  <div class="col-3">
+                  <div class="col">
                    <P>EMAIL:<a  href="#">techstrap@gmail.com</a></P>
                    <P>PH.NO:<a  href="#">7584634521</a><br></P>
                    <P>INSTAGRAM:<a  href="#">TECH-STRAP</a></P>
